[package]
name = "create2crunch"
authors = ["0age <0age@protonmail.com"]
version = "0.2.1"
edition = "2021"

[dependencies]
byteorder = "1"
console = "0.7.5"
fs2 = "0.4.3"
hex = "0.3.2"
itertools = "0.8.2"
ocl = "0.19.3"
ocl-extras = "0.1.1"
rand = "0.3"
rayon = "1.2.0"
separator = "0.3.1"
terminal_size = "0.1.17"
tiny-keccak = "1.5.0"
#tiny-keccak = { version = "2.0.0", features = ["keccak"] }